# pcf8523-pico

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: pcf8523.h
lib/src/: internal.h  pcf8523_enable_battery_switchover.c  pcf8523_get_datetime.c  pcf8523_reset.c  pcf8523_rtc_start.c  pcf8523_set_datetime.c
test/: main.c
